--- a/src/qt_gui/settings_dialog.ui
+++ b/src/qt_gui/settings_dialog.ui
@@ -897,15 +897,15 @@
              </widget>
             </item>
             <item>
-             <widget class="QGroupBox" name="groupBox">
+             <widget class="QGroupBox" name="GammaGroupBox">
               <property name="title">
                <string>Gamma Correction</string>
               </property>
-              <layout class="QVBoxLayout" name="verticalLayout_2">
+              <layout class="QVBoxLayout" name="GammaVLayout">
                <item>
-                <layout class="QHBoxLayout" name="horizontalLayout_5">
+                <layout class="QHBoxLayout" name="GammaLabelsHLayout">
                  <item>
-                  <widget class="QLabel" name="label_4">
+                  <widget class="QLabel" name="CurrentValueLabel">
                    <property name="text">
                     <string>Current Value:</string>
                    </property>
@@ -946,16 +946,16 @@
                 </widget>
                </item>
                <item>
-                <layout class="QHBoxLayout" name="horizontalLayout">
+                <layout class="QHBoxLayout" name="LighterDarkerHLayout">
                  <item>
-                  <widget class="QLabel" name="label_3">
+                  <widget class="QLabel" name="LighterLabel">
                    <property name="text">
                     <string>Lighter</string>
                    </property>
                   </widget>
                  </item>
                  <item>
-                  <widget class="QLabel" name="label_2">
+                  <widget class="QLabel" name="DarkerLabel">
                    <property name="text">
                     <string>Darker</string>
                    </property>
